--- a/css/main.css
+++ b/css/main.css
@@ -203,8 +203,12 @@ main {
       padding: 0.5rem 1.5rem;
       background: #eece1a;
       color: #000; }
-      .boxes div:hover span {
-        color: #000; }
+      .boxes div:hover span, .boxes div:hover p {
+        color: #000; 
+      font-weight: bold;}
+     
+    
+
 
 .btn, .btn-dark, .btn-light {
   display: block;
@@ -229,6 +233,11 @@ main {
   background: #2b2b2b;
   color: #fff;
   height: 60px; }
+
+#portraitImg {
+  width: 300px;
+  height: 300px;
+}
 
 @media screen and (min-width: 1171px) {
   .projects {
@@ -287,4 +296,26 @@ main {
   iframe {
     width: 340px;
   }
+  #portraitImg{
+    display: inline-block;
+    height: 240px;
+    width: 240px;
+    text-align: center;
+  }
+  #calorieTrackerHome, #openRoadsHome, #userCollectionHome, #about{
+    text-align: justify;
+  }
+  .bio h3 { text-align: center;}
+  #about h1 {margin-left: 1rem;}
+  .contactInfo {font-size: 1.5rem;} 
+  #contact { padding: auto;}
+  #contact .boxes {width: 350px;}
+
+  .boxes div:hover {
+    padding: 0.5rem 1.5rem;
+    background: #eece1a;
+    color: #000; }
+    .boxes div:hover span, .boxes div:hover p {
+      color: #000; 
+    font-weight: bold;}
   }
